--- a/authors/templates/contact.html
+++ b/authors/templates/contact.html
@@ -1,6 +1,6 @@
 {% extends 'books/base.html' %} {% load static %} {% block head %}
   <!-- EmailJS -->
-  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
   <script>
       (function () {
           emailjs.init('jF0IEklCsgp1doOjY');
