Fix accessibility errors on homepage and base templates

--- a/books/templates/books/base.html
+++ b/books/templates/books/base.html
@@ -98,28 +98,28 @@
     <div class="mb-4">
       <!-- Facebook -->
       <a class="btn text-white btn-floating m-1" style="background-color: #3b5998"
-         href="https://www.facebook.com/profile.php?id=100013694132979" target="_blank" role="button">
+         href="https://www.facebook.com/profile.php?id=100013694132979" target="_blank" role="button"  aria-label="Facebook link"> 
         <i class="fab fa-facebook-f"></i>
       </a>
       <!-- X-Twitter -->
       <a class="btn text-white btn-floating m-1" style="background-color: #55acee" href="https://twitter.com/tom_du3"
          target="_blank" role="button">
-        <i class="fa-brands fa-x-twitter"></i>
+        <i class="fa-brands fa-x-twitter"  aria-label="X-Twitter link"></i>
       </a>
       <!-- Instagram -->
       <a class="btn text-white btn-floating m-1" style="background-color: #ac2bac"
          href="https://www.instagram.com/007idkfa/" target="_blank" role="button">
-        <i class="fab fa-instagram"></i>
+        <i class="fab fa-instagram"  aria-label="Instagram link"></i>
       </a>
       <!-- Linkedin -->
       <a class="btn text-white btn-floating m-1" style="background-color: #0082ca"
          href="https://www.linkedin.com/in/tomislav-dukez-bb2349231/" target="_blank" role="button">
-        <i class="fab fa-linkedin-in"></i>
+        <i class="fab fa-linkedin-in"  aria-label="Linkedin link"></i>
       </a>
       <!-- Github -->
       <a class="btn text-white btn-floating m-1" style="background-color: #333333" href="https://github.com/tomdu3/"
          target="_blank" role="button">
-        <i class="fab fa-github"></i>
+        <i class="fab fa-github"  aria-label="Github link"></i>
       </a>
     </div>
   </div>
