--- a/books/templates/books/book_add.html
+++ b/books/templates/books/book_add.html
@@ -2,6 +2,7 @@
 {% load static %}
 
 {% block content %}
+
   <div class="container mt-5">
     <div class="row">
       <div class="col-md-12">
@@ -15,13 +16,13 @@
                 {% csrf_token %}
                 <div class="form-group">
                   <label class="form-label" for="title">Title:</label>
-                  <input type="text" class="form-control" id="title" name="title"
-                         placeholder="Title (required)" value="{{ book.title }}" required>
+                  <input type="text" class="form-control" id="title" name="title" placeholder="Title (required)"
+                  value="{{ book.title }}" required>
                 </div>
                 <div class="form-group">
                   <label class="form-label" for="author">Author:</label>
-                  <input type="text" class="form-control" id="author" name="author"
-                         placeholder="Author (required)" value="{{ book.author }}" required>
+                  <input type="text" class="form-control" id="author" name="author" placeholder="Author (required)"
+                  value="{{ book.author }}" required>
                 </div>
                 <div class="form-group">
                   <label class="form-label" for="short_description">Short Description:</label>
@@ -31,9 +32,7 @@
                 </div>
                 <div class="form-group">
                   <label class="form-label" for="full_description">Full Description:</label>
-                  <textarea class="form-control" id="full_description" name="full_description"
-                            rows="10" placeholder="Full Description (required)"
-                            required>{{ book.full_description }}</textarea>
+                  <textarea class="form-control" id="full_description" name="full_description" rows="10" placeholder="Full Description (required)" required>{{ book.full_description }}</textarea>
                 </div>
                 <div class="form-group">
                   <label class="form-label" for="image_url">Image URL:</label>
@@ -57,4 +56,5 @@
       </div>
     </div>
   </div>
+
 {% endblock %}
