--- a/books/templates/books/user_favourites.html
+++ b/books/templates/books/user_favourites.html
@@ -1,7 +1,14 @@
-{% extends 'books/base.html' %} {% load static %} {% block content %}
-  <div class="title text-center pt-4 h1">
-    <h1>{{ user.username|capfirst }}'s Favourites</h1>
-  </div> {% if user.is_authenticated %}{% if books|length != 0 %}
+{% extends 'books/base.html' %}
+
+{% load static %}
+
+{% block content %}
+
+  <div class="title text-center pt-4">
+    <h1 class="h1">{{ user.username|capfirst }}'s Favourites</h1>
+  </div>
+  {% if user.is_authenticated %}
+    {% if books|length != 0 %}
     <div class="container pt-lg-4 pt-sm-2 col-lg-8">
       <table class="table table-striped">
         <thead>
@@ -13,7 +20,8 @@
           <th class="text-center">Delete</th>
         </tr>
         </thead>
-        <tbody> {% for book in books %}
+        <tbody>
+          {% for book in books %}
           <tr>
             <td class="small-none align-middle">{{ forloop.counter }}</td>
             <td class="h6 align-middle">{{ book.author }}</td>
@@ -24,16 +32,23 @@
             <td class="text-center">
               <form method="post" action="{% url 'remove_from_favourites' slug=book.slug %}"> {% csrf_token %}
                 <button type="submit" class="btn btn-danger btn-sm">
-                  <i class="fa-solid fa-xmark fa-beat"></i>
+                  <i class="fa-solid fa-xmark fa-beat" aria-label="unlike"></i>
                 </button>
               </form>
             </td>
-          </tr> {% endfor %} </tbody>
+          </tr>
+          {% endfor %}
+        </tbody>
       </table>
-    </div>{% else %}
+    </div>
+    {% else %}
     <div class="text-center">
       <h3>No favourite books yet</h3>
-    </div>{% endif %}
-    <div class="container text-center">
-      <a href="{% url 'find_book' %}" class="btn btn-outline-danger">Add to Favourites</a>
-    </div> {% endif %} {% endblock %}
+    </div>
+    {% endif %}
+  <div class="container text-center pb-2">
+    <a href="{% url 'find_book' %}" class="btn btn-primary">Add to Favourites</a>
+  </div>
+  {% endif %}
+
+{% endblock %}
